[240909] 검색어를 입력하면 엔터키를 누르지 않아도 1000ms 뒤에 검색 목록이 자동으로 보여야합니다.

--- a/diary.html
+++ b/diary.html
@@ -115,6 +115,10 @@
             </li>
           </ul>
         </div>
+        <div class="search_wrapper">
+          <img src="./public/icons/search_outline_light_m.svg" alt="" />
+          <input type="text" id="search" oninput="searchFnc(event)" />
+        </div>
 
         <button class="writing_button" onclick="modalOn(1, 'modal_main_add')">
           <img src="./public/icons/plus_outline_light_m.svg" />
