--- a/daily.html
+++ b/daily.html
@@ -428,14 +428,23 @@
         </footer>
         <div id="modal" class="modal" onclick="onClickModalBlank(event)">
             <div class="modal_container">
-                <div class="daily-header">읽기 쓰기</div>
+                <div class="daily-header">
+                    <div>일기 쓰기</div>
+                    <div class="dark">
+                        <div>다크모드</div>
+                        <input
+                            type="checkbox"
+                            class="checkbox_dark"
+                            onclick="onClickToggle(event)"
+                        />
+                    </div>
+                </div>
                 <div class="daily-checkcontainer">
                     <div>오늘 기분은 어땟나요?</div>
                     <div class="daily-inputlist">
                         <div class="daily-input">
                             <input
                                 type="radio"
-                                oninput="onInputButtonChange()"
                                 name="radio"
                                 class="input-radio"
                                 id="happy"
@@ -445,7 +454,6 @@
                         <div class="daily-input">
                             <input
                                 type="radio"
-                                oninput="onInputButtonChange()"
                                 name="radio"
                                 class="input-radio"
                                 id="sad"
@@ -455,7 +463,6 @@
                         <div class="daily-input">
                             <input
                                 type="radio"
-                                oninput="onInputButtonChange()"
                                 name="radio"
                                 class="input-radio"
                                 id="surprise"
@@ -465,7 +472,6 @@
                         <div class="daily-input">
                             <input
                                 type="radio"
-                                oninput="onInputButtonChange()"
                                 name="radio"
                                 class="input-radio"
                                 id="angry"
@@ -475,7 +481,6 @@
                         <div class="daily-input">
                             <input
                                 type="radio"
-                                oninput="onInputButtonChange()"
                                 name="radio"
                                 class="input-radio"
                                 id="etc"
@@ -493,7 +498,6 @@
                                 id="titleId"
                                 class="input-title"
                                 placeholder="제목을 입력해 주세요."
-                                oninput="onInputButtonChange()"
                             />
                         </div>
                         <div class="daily-title">
@@ -502,7 +506,6 @@
                                 id="contentId"
                                 class="input-title input-content"
                                 placeholder="내용을 입력해주세요"
-                                oninput="onInputButtonChange()"
                             ></textarea>
                         </div>
                     </div>
@@ -517,7 +520,6 @@
                             id="submitButton"
                             class="submit-button"
                             onclick="onClickModalSuccess()"
-                            disabled
                         >
                             등록하기
                         </button>
@@ -574,4 +576,5 @@
     <script src="./utils/onClickChangePost.js"></script>
     <script src="./utils/onChangeRatio.js"></script>
     <script src="./utils/onClickDropDown.js"></script>
+    <script src="./utils/onClickToggle.js"></script>
 </html>
