[240909] assignment finish before responsive design

--- a/daily.html
+++ b/daily.html
@@ -382,6 +382,7 @@
                                 id=""
                                 class="search-input"
                                 placeholder="검색어를 입력해 주세요."
+                                oninput="onInputSearch(event)"
                             />
                         </div>
                     </div>
@@ -577,4 +578,6 @@
     <script src="./utils/onChangeRatio.js"></script>
     <script src="./utils/onClickDropDown.js"></script>
     <script src="./utils/onClickToggle.js"></script>
+    <script src="./utils/onScrollInfinite.js"></script>
+    <script src="./utils/onInputSearch.js"></script>
 </html>
