검색바 구현(기능X)

--- a/Section7/index.html
+++ b/Section7/index.html
@@ -51,11 +51,9 @@
             <option value="HTML_기타선택">기타</option>
           </select>
         </div>
+          <input type="text" placeholder="검색어를 입력해주세요." oninput="JS_검색기능(event)" class="CSS_검색"/>
         <div>
-          <button
-            class="CSS_일기쓰기버튼"
-            onclick="JS_모달열기기능('HTML_등록모달그룹')"
-          >
+          <button class="CSS_일기쓰기버튼" onclick="JS_모달열기기능('HTML_등록모달그룹')">
             <img src="./assets/images/plus.png" class="CSS_plus부분" />
             <div class="CSS_일기쓰기버튼_텍스트">일기쓰기</div>
           </button>
