모달 등록하기 버튼 수정

--- a/Section7/index.html
+++ b/Section7/index.html
@@ -52,6 +52,7 @@
           </select>
         </div>
           <input type="text" placeholder="검색어를 입력해주세요." oninput="JS_검색기능(event)" class="CSS_검색"/>
+          <div id="HTML_검색결과보여주는곳" class="CSS_검색결과보여주는곳"></div>
         <div>
           <button class="CSS_일기쓰기버튼" onclick="JS_모달열기기능('HTML_등록모달그룹')">
             <img src="./assets/images/plus.png" class="CSS_plus부분" />
