--- a/homework/section7/index.html
+++ b/homework/section7/index.html
@@ -6,6 +6,7 @@
   <title>다이어리 보관함📔</title>
   <link rel="stylesheet" href="./css/index.css" />
   <link rel="stylesheet" href="./css/image.css" />
+  <link rel="stylesheet" href="./css/dropdown.css" />
   <script src="./js/index.js"></script>
   <script src="./js/image.js"></script>
 </head>
@@ -26,14 +27,46 @@
     <!-- 일기 레이아웃 -->
     <div class="일기_레이아웃" id="일기_레이아웃">
       <div class="필터_박스">
-        <select id="필터" class="필터" onchange="필터링기능(event)">
-          <option selected value="전체선택">전체</option>
-          <option value="행복선택">행복해요</option>
-          <option value="슬픔선택">슬퍼요</option>
-          <option value="놀람선택">놀랐어요</option>
-          <option value="화남선택">화나요</option>
-          <option value="기타선택">기타</option>
-        </select>
+        <div class="필터박스와_서치바">
+          <div class="드롭다운_박스">
+            <input type="checkbox" id="드롭다운_제목" class="드롭다운_제목" />
+            <ul class="드롭다운_메뉴">
+              <li>
+                <input type="radio" name="드롭다운" id="전체" onclick="드롭다운선택기능(event)" />
+                <label for="전체">전체</label>
+              </li>
+              <li>
+                <input type="radio" name="드롭다운" id="행복해요" onclick="드롭다운선택기능(event)" />
+                <label for="행복해요">행복해요</label>
+              </li>
+              <li>
+                <input type="radio" name="드롭다운" id="슬퍼요" onclick="드롭다운선택기능(event)" />
+                <label for="슬퍼요">슬퍼요</label>
+              </li>
+              <li>
+                <input type="radio" name="드롭다운" id="놀랐어요" onclick="드롭다운선택기능(event)" />
+                <label for="놀랐어요">놀랐어요</label>
+              </li>
+              <li>
+                <input type="radio" name="드롭다운" id="화나요" onclick="드롭다운선택기능(event)" />
+                <label for="화나요">화나요</label>
+              </li>
+              <li>
+                <input type="radio" name="드롭다운" id="기타" onclick="드롭다운선택기능(event)" />
+                <label for="기타">기타</label>
+              </li>
+            </ul>
+          </div>
+          <!-- <select id="필터" class="필터" onchange="필터링기능(event)">
+            <option selected value="전체선택">전체</option>
+            <option value="행복선택">행복해요</option>
+            <option value="슬픔선택">슬퍼요</option>
+            <option value="놀람선택">놀랐어요</option>
+            <option value="화남선택">화나요</option>
+            <option value="기타선택">기타</option>
+          </select> -->
+          <input type="text" class="검색창" placeholder="검색어를 입력해 주세요" />
+        </div>
         <button onclick="모달열기기능('일기등록모달')" class="일기_쓰기_버튼">+ 일기쓰기</button>
       </div>
       <!-- 메인 -->
@@ -83,9 +116,15 @@
     <div class="모달배경" onclick="모달닫기기능('일기등록모달')"></div>
     <div class="일기_쓰기_공간_박스">
       <div class="일기_쓰기_공간">
-        <div class="일기_제목">📍 일기 쓰기</div>
+        <div class="타이틀_토글_박스">
+          <div class="일기_제목">📍 일기 쓰기</div>
+          <div class="토글_박스">
+            <div class="다크모드">다크모드</div>
+            <input type="checkbox" class="토글" onclick="다크모드기능(event)" />
+          </div>
+        </div>
         <div class="일기_작성_폼">
-          <div class="기분_어땟나요">오늘 기분은 어땟나요?</div>
+          <div class="기분_어땟나요">오늘 기분은 어땠나요?</div>
           <div class="기분_선택_라디오_영역">
             <div class="기분_라디오_박스">
               <input class="기분_영역" type="radio" value="행복해요" name="기분" />
