style: 제목 검색용 서치바 퍼블리싱

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -76,53 +76,61 @@
             <div class="navigation_layout">
               <div class="sub_navigation">
                 <div class="emotion_dropdown_layout">
-                  <div class="dropdown_name" id="filterCheckbox">
-                    <div class="dropdown_text">
-                      <input type="checkbox" id="mood_dropdown" />
-                      <img
-                        src="./image/dropdown_arrow.svg"
-                        width="24px"
-                        class="dropdown_img"
-                      />
+                  <div class="dropdown_search_box">
+                    <div class="dropdown_name" id="filterCheckbox">
+                      <div class="dropdown_text">
+                        <input type="checkbox" id="mood_dropdown" />
+                        <img
+                          src="./image/dropdown_arrow.svg"
+                          width="24px"
+                          class="dropdown_img"
+                        />
+                      </div>
+                      <ul class="dropdown" id="mood_list">
+                        <li>
+                          <div>
+                            전체
+                            <img src="./image/check.svg" class="check" />
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            행복해요
+                            <img src="./image/check.svg" class="check" />
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            슬퍼요
+                            <img src="./image/check.svg" class="check" />
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            놀랐어요
+                            <img src="./image/check.svg" class="check" />
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            화나요
+                            <img src="./image/check.svg" class="check" />
+                          </div>
+                        </li>
+                        <li>
+                          <div>
+                            기타
+                            <img src="./image/check.svg" class="check" />
+                          </div>
+                        </li>
+                      </ul>
                     </div>
-                    <ul class="dropdown" id="mood_list">
-                      <li>
-                        <div>
-                          전체
-                          <img src="./image/check.svg" class="check" />
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          행복해요
-                          <img src="./image/check.svg" class="check" />
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          슬퍼요
-                          <img src="./image/check.svg" class="check" />
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          놀랐어요
-                          <img src="./image/check.svg" class="check" />
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          화나요
-                          <img src="./image/check.svg" class="check" />
-                        </div>
-                      </li>
-                      <li>
-                        <div>
-                          기타
-                          <img src="./image/check.svg" class="check" />
-                        </div>
-                      </li>
-                    </ul>
+                    <div class="search_box">
+                      <div class="search_bar">
+                        <div class="search_img"><img src="./image/search.svg" /></div>
+                        <input type="text" placeholder="검색어를 입력해 주세요." />
+                      </div>
+                    </div>
                   </div>
                   <button
                     class="btn_register_diary"
