--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -128,7 +128,7 @@
                     <div class="search_box">
                       <div class="search_bar">
                         <div class="search_img"><img src="./image/search.svg" /></div>
-                        <input type="text" placeholder="검색어를 입력해 주세요." />
+                        <input oninput="onSearch(event)" type="text" placeholder="검색어를 입력해 주세요." />
                       </div>
                     </div>
                   </div>
