feat: 일기 등록 관련 모달 전체에 다크모드 전환 기능 구현

--- a/다이어리/diary.html
+++ b/다이어리/diary.html
@@ -210,7 +210,7 @@
                               class="mood_options"
                               name="mood"
                               onkeydown="onKeyPress(event)"
-                            /><label for="check_etc">기타</label>
+                            /><label for="check_etc" class="mood_text">기타</label>
                           </div>
                         </div>
                       </div>
