--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="./index_mobile.css">
     <script src="./index.js"></script>
     <script src="./common.js"></script>
+    <script src="./photos.js"></script>
 </head>
 <body>
     <div class="header">
@@ -26,10 +27,10 @@
 
         <div class="contents_container">
 
-            <!-- 필터 아이템 및 일기 쓰기 버튼 -->
+            <!-- 일기 필터 아이템 및 일기 쓰기 버튼 -->
             <div id="filter_item" class="filter_item">
-                <div class="www">
-                    <select id="mood_select", class="mood_select_box" onchange="filterDiary()">
+                <div id="diary_filter_dropbox" class="contents_diary_filter_dropbox">
+                    <select id="mood_select", class="select_filter_dropbox" onchange="filterDiary()">
                         <option value="전체" selected>전체</option>
                         <option value="행복해요">행복해요</option>
                         <option value="슬퍼요">슬퍼요</option>
@@ -41,6 +42,36 @@
                         <button class="contents_write_diary_button" onclick="writeButtonPressed()"><img class="write_diary_image" src="./assets/add.png">일기쓰기</button>
                     </div>
                 </div>
+
+                <div class="contents_photos_filter_dropbox" id="photos_filter_dropbox" onchange="filterPhotos(event)">
+                    <select id="photos_ratio_select_box" class="select_filter_dropbox">
+                        <option value="기본형" selected>기본형</option>
+                        <option value="가로형">가로형</option>
+                        <option value="세로형">세로형</option>
+                    </select>
+                </div>
+
+                <!-- 사진 보관함 필터 드롭박스 -->
+                <!-- <div class="contents_photos_filter_title_container">
+                    <input type="checkbox" class="contents_photos_filter_dropbox" id="photos_filter_dropbox" onclick="selectPhotosFilterDropBox(event)">
+                    <label for="photos_filter_dropbox" class="photos_filter_label">
+                        <img src="./assets/arrow_down.png">
+                    </label>
+                </div>
+                <ul class="contents_photos_filter_dropbox_menu" id="photos_filter_dropbox_menu">
+                    <li class="contents_photos_filter_item_group">
+                        <input type="radio" name="photos_filter_item" id="photos_filter_default" value="기본형" onclick="selectPhotosFilterMenu(event)">
+                        <label for="photos_filter_default">기본형<img src="./assets/check.png" class="check_img"></label>
+                    </li>
+                    <li class="contents_photos_filter_item_group">
+                        <input type="radio" name="photos_filter_item" id="photos_filter_vertical" value="세로형" onclick="selectPhotosFilterMenu(event)">
+                        <label for="photos_filter_vertical">세로형<img src="./assets/check.png" class="check_img"></label>
+                    </li>
+                    <li class="contents_photos_filter_item_group">
+                        <input type="radio" name="photos_filter_item" id="photos_filter_horizontal" value="가로형" onclick="selectPhotosFilterMenu(event)">
+                        <label for="photos_filter_horizontal">가로형<img src="./assets/check.png" class="check_img"></label>
+                    </li>
+                </ul> -->
             </div>
 
             <!-- 메인 컨텐츠 -->
@@ -116,7 +147,6 @@
                     </div>
                 </div>
 
-
             </div>
                 <button class="top_scroll_floating_button" id="top_scroll_button" onclick="topScrollFloatingButtonTapped()"><img src="./assets/top_scroll.png"></button>
         </div>
@@ -151,6 +181,8 @@
                     </div>
                 </div> <!-- write_diary_mood_buttonList -->
          </div> <!-- write_diary_mood_items -->
+
+
          <div class="write_diary_contents">
             <div class="write_diary_contents_items">
                 <div class="write_diary_contents_title">제목</div>
