[240910] CSS: 사진목록 - 강아지 사진 그라데이션 스켈레톤 이미지 구현 및 로딩 되는 동안 적용

--- a/01-diary/index.html
+++ b/01-diary/index.html
@@ -143,7 +143,11 @@
                 <!-- 사진 보관함 -->
                 <div class="contents_photos_container" id="HTML_contents_photos_container">
                     <div class="contents_photos_group" id="HTML_contents_photos_group">
-                        <!-- fetch Dogs Image -->
+                        <div id="skeleton_box">
+                            <div id="skeleton_bar"></div>
+                        </div>
+                        
+                            <!-- fetch Dogs Image -->
                     </div>
                 </div>
 
