--- a/CSS&JS 마스터/메인페이지.html
+++ b/CSS&JS 마스터/메인페이지.html
@@ -225,13 +225,15 @@
             </li>
           </ul>
         </div>
-        <div id="search_bar">
-          <img src="./assets/search_outline_light_m.svg" alt="" />
-          <input
-            type="text"
-            placeholder="검색어를 입력해 주세요."
-            oninput="searchTitle(event)"
-          />
+        <div id="search_bar_box">
+          <div id="search_bar">
+            <img src="./assets/search_outline_light_m.svg" alt="" />
+            <input
+              type="text"
+              placeholder="검색어를 입력해 주세요."
+              oninput="searchTitle(event)"
+            />
+          </div>
         </div>
         <button class="formButton">
           <img src="./assets/plus_outline_light_m.svg" alt="" />
