style: add toggle btn design and style

--- a/myDiary.html
+++ b/myDiary.html
@@ -135,6 +135,12 @@
         <div class="container__modal">
             <div class="modal__bg"></div>
             <div class="modal__form">
+
+                <div class="container__mode">
+                    <div class="mode__text">다크모드</div>
+                    <input class="mode__toggle" type="checkbox" />
+                </div>
+
                 <div class="modal__header">일기 쓰기</div>
                 <div class="modal__question">오늘 기분은 어땠나요?</div>
                 <div class="modal__radio">
